--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "data-finance-yt",
+  "homepage": "https://danielV1213.github.io/agrosense-webapp-reimagined",
+  "name": "agrosense-webapp-reimagined",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,6 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24"
   }
